--- a/package.json
+++ b/package.json
@@ -17,11 +17,18 @@
   },
   "homepage": "https://github.com/jduquain/workflowjuan#readme",
   "devDependencies": {
+    "bootstrap": "^3.3.7",
     "browser-sync": "^2.18.5",
+    "browserify": "^13.3.0",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.1",
     "gulp-clean": "^0.3.2",
     "gulp-concat": "^2.6.1",
-    "gulp-sass": "^3.0.0"
+    "gulp-imagemin": "^3.1.1",
+    "gulp-inject-partials": "^1.0.2",
+    "gulp-newer": "^1.3.0",
+    "gulp-sass": "^3.0.0",
+    "jquery": "^3.1.1",
+    "mustache": "^2.3.0"
   }
 }
